✔ Dynamic Navbar ✔ Signup Complete (some validations left) ❌ Login Left - for Talha Khan

--- a/src/app/components/account/signup/signup.component.html
+++ b/src/app/components/account/signup/signup.component.html
@@ -137,7 +137,7 @@
                     class="input-group align-center d-flex justify-content-center"
                   >
                     <label
-                      class="switch switch-lg switch-label switch-outline-info"
+                      class="switch switch-lg switch-label switch-outline-success"
                       tooltip="Gender"
                     >
                       <input
