--- a/src/app/components/users/academyadmin/academyadmindashboard/academyadmindashboard.component.html
+++ b/src/app/components/users/academyadmin/academyadmindashboard/academyadmindashboard.component.html
@@ -1,14 +1,81 @@
-<p>
-  academyadmindashboard works!
-  * 
-  * Logout Button
-  * Class Cards
-  * Profile Page
-  * Academy profile page
-  * Invitation Button
-  * Graphs
-  * Right Bar
+<div class="animated fadeIn">
+  <div class="row">
+    <!-- <div class="col-sm-6 col-md-4 col-lg-3 pb-4">
+          <button
+            class="btn btn-sm btn-secondary border border-secondary btn-block h-100"
+            tooltip="Add Option"
+            triggers="mouseenter:mouseleave"
+            >
+            <span><i class="text-dark fa fa-plus display-4"></i></span>
+          </button>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-3 pb-4">
+          <button
+          class="btn btn-sm btn-secondary border border-secondary btn-block h-100"
+          tooltip="Add Option"
+          triggers="mouseenter:mouseleave"
+          >
+          <p class="display-4">➕</p>
+          </button>
+        </div> -->
+    <div class="col-sm-6 col-md-4 col-lg-3 pb-4">
+      <button
+        class="btn btn-sm btn-secondary border border-secondary btn-block h-100"
+        tooltip="Add Class"
+        triggers="mouseenter:mouseleave"
+        (click)="openDialog()"
+      >
+        <p class="display-1 text-dark">+</p>
+        <!-- <span><i class="text-dark fa fa-plus display-4"></i></span> -->
+      </button>
+    </div>
+    <div class="col-sm-6 col-md-4 col-lg-3">
+      <div class="card text-white bg-dark">
+        <div class="card-header h4">
+          9th Class
+          <button
+            class="btn btn-sm btn-outline-danger  float-right ml-2"
+            tooltip="Delete Class"
+            triggers="mouseenter:mouseleave"
+          >
+            <span><i class="fa fa-trash"></i> </span>
+          </button>
+        </div>
+        <div class="card-body">
+          <div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item bg-dark p-1">
+                <i class="icon-people"></i
+                ><a href="www.google.com" target="_blank" class="text-white">
+                  No of Subjects :</a
+                >
+                <strong> 7 </strong>
+              </li>
+              <li class="list-group-item bg-dark p-1">
+                <i class="icon-people"></i> Total Students :
+                <strong> 50 </strong>
+              </li>
+              <li class="list-group-item bg-dark p-1">
+                <i class="icon-people"></i> Total Teachers :
+                <strong> 7 </strong>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<pre>
+  * Logout Button 
+  * Class Cards 
+  * Profile Page 
+  * Academy profile page 
+  * Invitation Button 
+  * Graphs 
+  * Right Bar 
   * Notifications
-  * Requests Teacher Student
+  * Requests Teacher Student 
   * Request Cards
-</p>
+</pre>
