user specific services in progress

--- a/src/app/components/users/academyadmin/academyadmindashboard/academyadmindashboard.component.html
+++ b/src/app/components/users/academyadmin/academyadmindashboard/academyadmindashboard.component.html
@@ -30,34 +30,34 @@
       </button>
     </div>
     <div class="col-sm-6 col-md-4 col-lg-3">
-      <div class="card text-white bg-dark">
-        <div class="card-header h4">
-          9th Class
+      <div class="card bg-dark">
+        <div class="card-header h3 p-2">
+          Class: 9
           <button
-            class="btn btn-sm btn-outline-danger  float-right ml-2"
+            class="btn btn-outline-danger border-0 float-right py-1 px-2"
             tooltip="Delete Class"
             triggers="mouseenter:mouseleave"
           >
             <span><i class="fa fa-trash"></i> </span>
           </button>
         </div>
-        <div class="card-body">
+        <div class="card-body p-2">
           <div>
             <ul class="list-group list-group-flush">
               <li class="list-group-item bg-dark p-1">
                 <i class="icon-people"></i
                 ><a href="www.google.com" target="_blank" class="text-white">
-                  No of Subjects :</a
+                  Subjects : <strong> 7 </strong></a
                 >
-                <strong> 7 </strong>
               </li>
               <li class="list-group-item bg-dark p-1">
-                <i class="icon-people"></i> Total Students :
-                <strong> 50 </strong>
+                <i class="icon-people"></i> Students : <strong> 50 </strong>
               </li>
               <li class="list-group-item bg-dark p-1">
-                <i class="icon-people"></i> Total Teachers :
-                <strong> 7 </strong>
+                <i class="icon-people"></i> Teachers : <strong> 7 </strong>
+              </li>
+              <li class="list-group-item bg-dark p-1">
+                <i class="icon-people"></i> Classrooms : <strong> 7 </strong>
               </li>
             </ul>
           </div>
