--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -85,7 +85,9 @@
         <!-- <a class="dropdown-item" href="#"><i class="fa fa-file"></i> Projects<span class="badge badge-primary">42</span></a> -->
         <div class="divider"></div>
         <!-- <a class="dropdown-item" href="#"><i class="fa fa-shield"></i> Lock account</a> -->
-        <a class="dropdown-item" (click)="logOut()"><i class="fa fa-lock"></i> Logout</a>
+        <a class="dropdown-item" (click)="logOut()"
+          ><i class="fa fa-lock"></i> Logout</a
+        >
       </div>
     </li>
   </ul>
@@ -93,7 +95,7 @@
 <div class="app-body">
   <app-sidebar [fixed]="true" [display]="'lg'">
     <app-sidebar-nav
-    *ngIf="navItems"
+      *ngIf="navItems"
       [navItems]="navItems"
       [perfectScrollbar]
       [disabled]="sidebarMinimized"
